Bug 1156533 - Simplify how we trace Shapes for marking; r=sfink